--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ input {
 
     li {
         padding: 10px;
+        cursor: pointer;
     }
 }
 
@@ -59,7 +60,22 @@ input {
     background-color: hsl(220, 62%, 57%);
 }
 
+.clearCompletedButton:hover {
+    background-color: hsl(220, 79%, 51%);
+}
+
 .completed {
     text-decoration: line-through;
     color: gray;
+    opacity: 0.6;
+}
+
+
+.delete-btn {
+    background: none;
+    border: none;
+    color: lightslategray;
+    font-size: 18px;
+    cursor: pointer;
+    
 }
